k8s/prod/zigbee2mqtt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  labels:
    name: zigbee2mqtt
