k8s/prod/zigbee2mqtt/zigbee2mqtt.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/version: 1.19.1
    helm.sh/chart: zigbee2mqtt-9.4.2
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/name: zigbee2mqtt
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/version: 1.19.1
    helm.sh/chart: zigbee2mqtt-9.4.2
  annotations:
    configmap.reloader.stakater.com/reload: "zigbee2mqtt-settings"
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zigbee2mqtt
      app.kubernetes.io/name: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zigbee2mqtt
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: ZIGBEE2MQTT_DATA
          value: /data
        - name: Z2M_WATCHDOG
          value: "1,1,1,1,1,1,1,1,1,1"  # 10 retries, 1 minute apart
        image: koenkk/zigbee2mqtt:2.14.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 23m
            memory: 127M
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: zigbee2mqtt
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - SYS_ADMIN
          privileged: true

        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      serviceAccountName: default
      volumes:
      - configMap:
          name: zigbee2mqtt-settings
        name: zigbee2mqtt-settings
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-workspace-data
