k8s/prod/zigbee2mqtt/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-redirect
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`zig.kube.marcyoung.us`)
      priority: 10
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: zigbee2mqtt
          port: 8080
---
# Source: zigbee2mqtt/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zig.kube.marcyoung.us`)
      services:
        - name: zigbee2mqtt
          port: 8080
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
  tls:
    secretName: zigbee2mqtt-cert
